tests/unit-fail-compilation/j059d.c.ref
j059d.c:4:13: error: Declaration of an identifier for an object with no linkage and incomplete type.

    Undefined behavior (UB-TDL5):
        see C11 section 6.7:7 http://rvdoc.org/C11/6.7
        see C11 section J.2:1 item 59 http://rvdoc.org/C11/J.2
        see CERT-C section DCL31-C http://rvdoc.org/CERT-C/DCL31-C
        see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1

Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
