tests/unit-fail-compilation/j059d.c
typedef int t[];

int main(void) {
      t a = {0}, b;
      return 0;
}
